feat : Admin 페이지 프론트단 제작 프로젝트 2일차

--- a/Bootstrap_Project/AdminPage/AdminPage.css
+++ b/Bootstrap_Project/AdminPage/AdminPage.css
@@ -32,3 +32,18 @@
   width: 8%;
   min-width: 80px;
 }
+
+.btns {
+	position: absolute;
+	top:0
+}
+
+#signUp{
+	right: 0;
+	top: 5px
+}
+
+#darkMode{
+	right: 90px;
+}
+
